--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=false
 
-# Web server port
+#PORT
 server.port=${PORT:8080}
+
+#RENDER
+spring.datasource.url=jdbc:sqlite:/app/reservation.db
 
 # Thymeleaf
 spring.thymeleaf.cache=false
