--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,16 @@
-# SQLite
-spring.datasource.url=jdbc:sqlite:${DB_FILE:./reservation.db}
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-
-# JPA 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=false
-
-#PORT
+# ---- Server (Render will still pass PORT) ----
 server.port=${PORT:8080}
 
-#RENDER
-spring.datasource.url=jdbc:sqlite:/app/reservation.db
+# ---- SQLite datasource ----
+# If DB_FILE is set (Render), use it; otherwise default to a local file "reservation.db"
+spring.datasource.url=jdbc:sqlite:${DB_FILE:reservation.db}
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.hibernate.ddl-auto=update
 
-# Thymeleaf
-spring.thymeleaf.cache=false
 
 
+# Helpful logging 
+logging.level.org.hibernate.SQL=warn
+logging.level.org.springframework.web=info
 
-logging.level.org.hibernate.SQL=INFO
-logging.level.org.springframework.jdbc.core=INFO
+spring.jpa.open-in-view=true
